--- a/container.html
+++ b/container.html
@@ -3,12 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Riquadro Vuoto (Responsive)</title>
+  <title>Riquadro Vuoto (LiveScore style)</title>
+
   <style>
     :root{
-      --r: 14px;                        /* raggio angoli */
-      --bg: rgba(10,10,10,0.90);        /* sfondo */
-      --borderPad: 2px;                 /* spessore bordo */
+      /* LiveScore vibe (granata) */
+      --bg1: rgba(58, 10, 18, 0.92);   /* granata scuro */
+      --bg2: rgba(34, 6, 12, 0.92);    /* più scuro per profondità */
+      --stroke1: rgba(255,255,255,0.85);
+      --stroke2: rgba(255,255,255,0.25);
+
+      /* responsive rispetto al container */
+      --r: clamp(6px, 1.2vw, 12px);
+      --borderPad: clamp(1px, 0.25vw, 2px);
     }
 
     *{ box-sizing:border-box; }
@@ -20,17 +27,22 @@
       background: transparent;
     }
 
-    /* Il riquadro prende SEMPRE la dimensione del container */
     .panel{
       width:100%;
       height:100%;
       border-radius: var(--r);
-      background: var(--bg);
       position:relative;
       overflow:hidden;
+
+      /* fondo granata con lieve “profondità” */
+      background:
+        radial-gradient(120% 140% at 0% 0%,
+          rgba(255,255,255,0.06) 0%,
+          rgba(255,255,255,0.00) 45%),
+        linear-gradient(135deg, var(--bg1), var(--bg2));
     }
 
-    /* bordo soft (leggermente sfumato) */
+    /* bordo pulito stile overlay */
     .panel::before{
       content:"";
       position:absolute;
@@ -38,9 +50,9 @@
       border-radius: var(--r);
       padding: var(--borderPad);
       background: linear-gradient(135deg,
-        rgba(255,255,255,0.95),
-        rgba(255,255,255,0.35),
-        rgba(255,255,255,0.75)
+        var(--stroke1),
+        var(--stroke2),
+        rgba(255,255,255,0.60)
       );
       -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
       -webkit-mask-composite: xor;
@@ -48,15 +60,15 @@
       pointer-events:none;
     }
 
-    /* glow/ombra esterna */
+    /* glow/ombra come “card” live */
     .panel::after{
       content:"";
       position:absolute;
-      inset:-10px;
-      border-radius: calc(var(--r) + 10px);
+      inset:-12px;
+      border-radius: calc(var(--r) + 12px);
       box-shadow:
         0 0 0 1px rgba(255,255,255,0.10),
-        0 10px 30px rgba(0,0,0,0.35);
+        0 12px 28px rgba(0,0,0,0.45);
       pointer-events:none;
     }
   </style>
