Update title in container.html

--- a/container.html
+++ b/container.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Riquadro Vuoto (LiveScore style)</title>
+  <title>Riquadro Vuoto</title>
 
   <style>
     :root{
