--- a/container.html
+++ b/container.html
@@ -1,80 +1,175 @@
 <!doctype html>
 <html lang="it">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Riquadro Vuoto</title>
+<meta charset="utf-8" />
 
-  <style>
-    :root{
-      /* LiveScore vibe (granata) */
-      --bg1: rgba(58, 10, 18, 0.92);   /* granata scuro */
-      --bg2: rgba(34, 6, 12, 0.92);    /* più scuro per profondità */
-      --stroke1: rgba(255,255,255,0.85);
-      --stroke2: rgba(255,255,255,0.25);
+<style>
+@import url(https://fonts.googleapis.com/css2?family=Anton&family=Roboto:700&display=swap);
 
-      /* responsive rispetto al container */
-      --r: clamp(6px, 1.2vw, 12px);
-      --borderPad: clamp(1px, 0.25vw, 2px);
-    }
+* { box-sizing: border-box; }
 
-    *{ box-sizing:border-box; }
-    html, body{
-      width:100%;
-      height:100%;
-      margin:0;
-      overflow:hidden;
-      background: transparent;
-    }
+html, body {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
 
-    .panel{
-      width:100%;
-      height:100%;
-      border-radius: var(--r);
-      position:relative;
-      overflow:hidden;
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 20px; /* aumentato */
+  line-height: 1.5em;
+  color: #fff;
+  text-shadow: 0 0 1px #000, 0 0 2px #000;
+  background: transparent;
+}
 
-      /* fondo granata con lieve “profondità” */
-      background:
-        radial-gradient(120% 140% at 0% 0%,
-          rgba(255,255,255,0.06) 0%,
-          rgba(255,255,255,0.00) 45%),
-        linear-gradient(135deg, var(--bg1), var(--bg2));
-    }
+/* CONTENITORE */
+#bits-log{
+  position: absolute;
+  inset: 0;
+  padding: 12px;
+  background: rgba(88,7,7,0.7);
+  border-radius: 14px;
+  display: flex;
+  flex-direction: column;
+}
 
-    /* bordo pulito stile overlay */
-    .panel::before{
-      content:"";
-      position:absolute;
-      inset:0;
-      border-radius: var(--r);
-      padding: var(--borderPad);
-      background: linear-gradient(135deg,
-        var(--stroke1),
-        var(--stroke2),
-        rgba(255,255,255,0.60)
-      );
-      -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
-      -webkit-mask-composite: xor;
-      mask-composite: exclude;
-      pointer-events:none;
-    }
+/* BORDO */
+#bits-log::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  border-radius:14px;
+  padding:2px;
+  background: linear-gradient(
+    135deg,
+    rgba(255,255,255,0.95),
+    rgba(255,255,255,0.45),
+    rgba(255,255,255,0.95)
+  );
 
-    /* glow/ombra come “card” live */
-    .panel::after{
-      content:"";
-      position:absolute;
-      inset:-12px;
-      border-radius: calc(var(--r) + 12px);
-      box-shadow:
-        0 0 0 1px rgba(255,255,255,0.10),
-        0 12px 28px rgba(0,0,0,0.45);
-      pointer-events:none;
-    }
-  </style>
+  -webkit-mask:
+    linear-gradient(#000 0 0) content-box,
+    linear-gradient(#000 0 0);
+  -webkit-mask-composite: xor;
+          mask-composite: exclude;
+
+  box-shadow: 0 0 12px rgba(255,255,255,0.25);
+  pointer-events:none;
+}
+
+/* HEADER (IDENTICO ALLA CHAT) */
+#bits-header{
+  font-family:'Anton', sans-serif;
+  font-size:1.4em;   /* stessa dimensione della chat */
+  letter-spacing:1px;
+
+  background: linear-gradient(
+    to bottom,
+    rgba(255,255,255,0.95),
+    rgba(240,240,240,0.95)
+  );
+
+  color:#831d1c;
+  text-shadow:none;
+
+  padding:6px 10px;
+  margin-bottom:10px;
+  border-radius:8px;
+  text-align:center;
+  position:relative;
+}
+
+#bits-header::after{
+  content:"";
+  position:absolute;
+  left:10%;
+  right:10%;
+  bottom:-3px;
+  height:2px;
+
+  background: linear-gradient(
+    to right,
+    rgba(255,255,255,0),
+    rgba(255,255,255,0.9),
+    rgba(255,255,255,0)
+  );
+
+  border-radius:2px;
+  opacity:.8;
+}
+
+/* LISTA */
+#bits-inner{
+  display:flex;
+  flex-direction:column;
+  gap:10px;
+}
+
+/* RIGHE */
+.bits-row{
+  display:grid;
+  grid-template-columns: 52px 1fr; /* colonna numeri stretta ma allineata */
+  align-items:center;
+  gap:8px;
+
+  padding:8px 10px;
+  border-radius:10px;
+
+  background: rgba(0,0,0,0.15);
+  border:1px solid rgba(255,255,255,0.12);
+}
+
+.bits-amount{
+  text-align:right;   /* numeri allineati in colonna */
+  font-family:'Anton', sans-serif;
+  font-size:1.25em;
+  letter-spacing:.5px;
+  white-space:nowrap;
+}
+
+.bits-desc{
+  font-size:0.9em; /* più grande */
+}
+
+.bits-desc::before{
+  content:"— ";
+  opacity:.9;
+}
+</style>
 </head>
 
 <body>
-  <div class="panel"></div>
+
+<div id="bits-log">
+  <div id="bits-header">Aumenta la durata della Live!</div>
+
+  <div id="bits-inner">
+
+
+    <div class="bits-row">
+      <div class="bits-amount">Follow</div>
+      <div class="bits-desc">+1 minuto di Live</div>
+    </div>
+
+    <div class="bits-row">
+      <div class="bits-amount">ogni 1€ donato</div>
+      <div class="bits-desc"><i>+1 minuto di Live</i></div>
+    </div>
+
+        <div class="bits-row">
+      <div class="bits-amount">ogni 100 Bit</div>
+      <div class="bits-desc">+2 minuti di Live</div>
+    </div>
+    
+    <div class="bits-row">
+      <div class="bits-amount">Sub</div>
+      <div class="bits-desc"><i>+5 Minuti di Live</i></div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
