--- a/container.html
+++ b/container.html
@@ -56,7 +56,6 @@ body{
   font-family:'Anton',sans-serif;
   font-size:1.35em;
   letter-spacing:1px;
-  text-transform:uppercase;
   background:linear-gradient(to bottom, rgba(255,255,255,0.95), rgba(240,240,240,0.95));
   color:#831d1c;
   text-shadow:none;
@@ -95,11 +94,11 @@ body{
 .row{
   display:grid;
 
-  /* colonna sinistra uniforme ma più “compatta” */
-  grid-template-columns: minmax(120px, 200px) 1fr;
+  /* come il "bits container": colonna sinistra stabile */
+  grid-template-columns: 190px 1fr;
 
   align-items:center;
-  column-gap:8px;
+  column-gap:10px;
 
   padding:10px 12px;
   border-radius:10px;
@@ -108,9 +107,9 @@ body{
   overflow:hidden;
 }
 
-/* sinistra: ora allineata a sinistra */
+/* colonna sinistra: allineata a DESTRA (stile bits) */
 .label{
-  text-align:left;
+  text-align:right;
   font-family:'Anton',sans-serif;
   font-size:1.10em;
   letter-spacing:.5px;
@@ -119,20 +118,20 @@ body{
   text-overflow:ellipsis;
 }
 
-/* destra */
+/* descrizione */
 .desc{
   font-size:0.95em;
   min-width:0;
 }
-
-/* se vuoi il trattino, rimetti "— " */
 .desc::before{
-  content:"";
+  content:"— ";
+  opacity:.9;
 }
 
+/* responsive */
 @media (max-width: 420px){
   body{ font-size:18px; }
-  .row{ grid-template-columns: minmax(110px, 170px) 1fr; }
+  .row{ grid-template-columns: 160px 1fr; }
 }
 </style>
 </head>
