--- a/container.html
+++ b/container.html
@@ -56,6 +56,7 @@ body{
   font-family:'Anton',sans-serif;
   font-size:1.35em;
   letter-spacing:1px;
+  text-transform:uppercase;
   background:linear-gradient(to bottom, rgba(255,255,255,0.95), rgba(240,240,240,0.95));
   color:#831d1c;
   text-shadow:none;
