--- a/container-h.html
+++ b/container-h.html
@@ -11,11 +11,12 @@ html,body{
   margin:0; overflow:hidden;
   background:transparent;
 }
+
 body{
   font-family:'Roboto',sans-serif;
   font-weight:700;
-  font-size:20px;
-  line-height:1.5em;
+  font-size: clamp(16px, 1.8vw, 20px); /* non schiaccia a 1000 */
+  line-height: 1.35em;
   color:#fff;
   text-shadow:0 0 1px #000, 0 0 2px #000;
   position:relative;
@@ -49,23 +50,27 @@ body{
   pointer-events:none;
 }
 
-/* GRID 4 COLONNE */
+/* GRID RESPONSIVE: prova a fare 4 colonne, ma se non c'è spazio va a 3/2 */
 #grid{
   position:relative;
   z-index:1;
   height:100%;
   display:grid;
-  grid-template-columns: repeat(4, 1fr);
+
+  /* CHIAVE: minmax -> se il container è stretto, le colonne vanno a capo */
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+
   gap:12px;
   align-items:stretch;
 }
 
-/* COLONNA (card interna) */
+/* COLONNA */
 .col{
   min-width:0;
   display:flex;
   flex-direction:column;
   gap:10px;
+
   padding:10px;
   border-radius:12px;
   background:rgba(0,0,0,0.10);
@@ -75,7 +80,7 @@ body{
 /* HEADER (solo colonna 1) */
 .header{
   font-family:'Anton',sans-serif;
-  font-size:1.15em;
+  font-size: clamp(18px, 2.2vw, 24px);
   letter-spacing:1px;
   background:linear-gradient(to bottom, rgba(255,255,255,0.95), rgba(240,240,240,0.95));
   color:#831d1c;
@@ -101,12 +106,11 @@ body{
   opacity:.8;
 }
 
-/* ROW (stile “bits container”) */
+/* ROW = FLEX (come vuoi tu) */
 .row{
-  display:grid;
-  grid-template-columns: 160px 1fr; /* colonna label stabile */
+  display:flex;
   align-items:center;
-  column-gap:10px;
+  gap:10px;
 
   padding:10px 12px;
   border-radius:10px;
@@ -114,22 +118,30 @@ body{
   border:1px solid rgba(255,255,255,0.12);
   overflow:hidden;
 }
+
+/* label: colonna “stile bits” (allineata a destra), ma NON si schiaccia */
 .label{
-  text-align:right;
   font-family:'Anton',sans-serif;
-  font-size:1.05em;
   letter-spacing:.5px;
+  text-align:right;
+
+  flex: 0 0 clamp(120px, 38%, 190px); /* larghezza adattiva */
+  min-width: 110px;
+
   white-space:nowrap;
   overflow:hidden;
   text-overflow:ellipsis;
 }
+
+/* desc: prende il resto e va a capo se serve */
 .desc{
-  font-size:0.92em;
+  flex: 1 1 auto;
   min-width:0;
+  font-size: 0.95em;
 }
 .desc::before{ content:"— "; opacity:.9; }
 
-/* Colonna 4 vuota: solo “vuoto bello” */
+/* Colonna 4 vuota */
 .empty{
   flex:1;
   border-radius:10px;
@@ -137,10 +149,12 @@ body{
   border:1px dashed rgba(255,255,255,0.18);
 }
 
-/* Responsive: se si stringe troppo, riduci la label */
+/* Se diventa MOLTO stretto, riduci un pelo padding per non “impastare” */
 @media (max-width: 900px){
-  body{ font-size:18px; }
-  .row{ grid-template-columns: 130px 1fr; }
+  #panel{ padding:10px; }
+  #grid{ gap:10px; }
+  .col{ padding:9px; }
+  .row{ padding:9px 10px; }
 }
 </style>
 </head>
@@ -173,12 +187,12 @@ body{
       <!-- COLONNA 3: 2 row -->
       <div class="col">
         <div class="row">
-          <div class="label">Sub normale</div>
-          <div class="desc"><i>+5 minuti di Live</i></div>
+          <div class="label">Sub</div>
+          <div class="desc">+5 minuti di Live</div>
         </div>
         <div class="row">
-          <div class="label">Sub con Prime</div>
-          <div class="desc"><i>+5 minuti di Live</i></div>
+          <div class="label">Prime</div>
+          <div class="desc">+5 minuti di Live</div>
         </div>
       </div>
 
