Update donation labels and descriptions in HTML

--- a/container-h.html
+++ b/container-h.html
@@ -180,12 +180,12 @@ body{
       <!-- COLONNA 2: 2 row -->
       <div class="col">
         <div class="row">
-          <div class="label">ogni 1€ donato</div>
-          <div class="desc"><i>+1 minuto di Live</i></div>
+          <div class="label">x1€ donato</div>
+          <div class="desc">+1' di Live</div>
         </div>
         <div class="row">
-          <div class="label">ogni 100 Bit</div>
-          <div class="desc">+2 minuti di Live</div>
+          <div class="label">x100 Bit</div>
+          <div class="desc">+2' di Live</div>
         </div>
       </div>
 
@@ -193,11 +193,11 @@ body{
       <div class="col">
         <div class="row">
           <div class="label">Sub</div>
-          <div class="desc"><i>+5 minuti di Live</i></div>
+          <div class="desc">+5' di Live</div>
         </div>
         <div class="row">
           <div class="label">Prime</div>
-          <div class="desc"><i>+5 minuti di Live</i></div>
+          <div class="desc">+5' di Live</div>
         </div>
       </div>
 
