Fix typo in Live duration description

--- a/container-h.html
+++ b/container-h.html
@@ -173,7 +173,7 @@ body{
         <div class="header">Aumenta la durata della Live!</div>
         <div class="row">
           <div class="label">Follow</div>
-          <div class="desc">+1 minuto di Live</div>
+          <div class="desc">+1' di Live</div>
         </div>
       </div>
 
