Update header text to uppercase

--- a/container-h.html
+++ b/container-h.html
@@ -170,7 +170,7 @@ body{
 
       <!-- COLONNA 1: header + 1 row -->
       <div class="col">
-        <div class="header">Aumenta la durata della Live!</div>
+        <div class="header">AUMENTA DURATA DELLA LIVE!</div>
         <div class="row">
           <div class="label">Follow</div>
           <div class="desc">+1' di Live</div>
